<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.yawlfoundation</groupId>
    <artifactId>yawl</artifactId>
    <version>5.2</version>
    <packaging>jar</packaging>

    <name>YAWL - Yet Another Workflow Language</name>
    <description>YAWL BPM/Workflow system with A2A and MCP integration</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <junit.version>4.13.2</junit.version>
    </properties>

    <dependencies>
        <!-- Existing dependencies -->
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.6</version>
        </dependency>
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.5.0</version>
        </dependency>

        <!-- A2A Java SDK dependencies -->
        <!-- Note: Using placeholder coordinates as the actual A2A Java SDK may not be published to Maven Central yet -->
        <!-- You may need to build and install it locally or use JitPack -->
        <!--
        <dependency>
            <groupId>org.a2aproject</groupId>
            <artifactId>a2a-java-client</artifactId>
            <version>0.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.a2aproject</groupId>
            <artifactId>a2a-java-server</artifactId>
            <version>0.1.0</version>
        </dependency>
        -->

        <!-- MCP Java SDK dependencies -->
        <dependency>
            <groupId>io.modelcontextprotocol</groupId>
            <artifactId>mcp</artifactId>
            <version>0.5.0</version>
        </dependency>
        <dependency>
            <groupId>io.modelcontextprotocol</groupId>
            <artifactId>mcp-spring-webmvc</artifactId>
            <version>0.5.0</version>
        </dependency>

        <!-- Reactor for async support -->
        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-core</artifactId>
            <version>3.6.0</version>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <!-- Add JitPack repository for GitHub-based dependencies -->
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <build>
        <sourceDirectory>src</sourceDirectory>
        <testSourceDirectory>test</testSourceDirectory>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>25</source>
                    <target>25</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <testFailureIgnore>true</testFailureIgnore>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>org.yawlfoundation.yawl.controlpanel.YControlPanel</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
